# acerc110

./: CMakeLists.txt  FindLIBUSB.cmake  Jamfile  Jamrules  README.md  configure.ac  daemon.cpp  modeswitch
include/: am7xxx.hpp  pimpl.hpp  pimpl_.hpp  projector.hpp  screenshot.hpp  screenshotXShm.hpp
lib/: Jamfile  am7xxx.hpp  pimpl.hpp  projector.cpp  projector.hpp  screenshot.hpp  screenshotXShm.cpp  screenshotXShm.hpp  transform.cpp  transform.hpp
src/: Jamfile  Makefile.am  daemon.cpp  projector.cpp  screenshotXShm.cpp
