CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(LIBUSB REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)
FIND_PACKAGE(X11)
#FIND_PACKAGE(imageMagick REQUIRED COMPONENTS Magick++)

SET(CORE_CPPFILES
    lib/projector.cpp
    lib/screenshotXShm.cpp
    lib/transform.cpp
)

SET(CORE_LIBS ${LIBUSB_LIBRARIES} ${JPEG_LIBRARIES} ${X11_LIBRARIES})
INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIRS} ${JPEG_INCLUDE_DIRS} ${X11_INCLUDE_DIR})

ADD_LIBRARY(corelib STATIC ${CORE_CPPFILES})
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
TARGET_LINK_LIBRARIES(corelib ${CORE_LIBS})

# exec
OPTION(ACERC11XDRV_DAEMON "A daemon to run the library" ON)
IF(ACERC11XDRV_DAEMON)
	ADD_EXECUTABLE(daemon daemon.cpp)
	SET(EXECUTABLES ${EXECUTABLES} daemon)
	TARGET_LINK_LIBRARIES(daemon corelib)
ENDIF()


